fix tag wrapping and center nav in container

--- a/chores/static/chores/css/chores.css
+++ b/chores/static/chores/css/chores.css
@@ -48,6 +48,9 @@ details>ul>li h3 {
 }
 
 details ul.tag-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5em;
     list-style: none;
     margin: 0;
     padding: 0;
@@ -55,7 +58,7 @@ details ul.tag-list {
 }
 
 details ul.tag-list>li {
-    display: inline;
+    display: inline-block;
     padding: 0.4em 0.6em;
     border-radius: 1em;
     background: var(--chore-card-tag-background-color);
