--- a/chores/static/chores/css/main.css
+++ b/chores/static/chores/css/main.css
@@ -170,7 +170,7 @@ header nav ul {
     height: 3em;
     margin: 0;
     padding: 0;
-    text-align: right;
+    text-align: center;
 }
 
 header nav ul li {
